2009-06-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(-davResourceType): return the "schedule-inbox" and
	"schedule-inbox" caldav types when the user is the owner and the
	collection is its personal calendar.

	* SoObjects/SOGo/SOGoGCSFolder.m (davSyncCollection:): new method
	that implements the draft webdav sync specification
	(http://ietfreport.isoc.org/idref/draft-daboo-webdav-sync/).

	* SoObjects/SOGo/NSString+DAV.m (asWebDAVTupleWithContent:): new
	method that returns a DAV dictionary from a flat DAV element (self)
	string and a content.

	* SoObjects/SOGo/NSArray+DAV.m (asWebDavStringWithNamespaces:): we
	no longer use an NSEnumerator in order to be a bit faster.

2009-06-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/DOMNode+SOGo.m
	(-flatPropertyNameOfSubElements): new method that returns
	flattened ({namespace}tag) names of the first direct child
	elements.

	* SoObjects/SOGo/SOGoGCSFolder.m (-davSQLFieldsTable): new method
	that returns a correspondance table between requested dav
	properties and SQL fields required to answer them.
	(-parseDAVRequestedProperties:): new method derived from a similar
	one in SOGoAppointmentFolder which will return a dictionary of DAV
	properties that are requested as well as their corresponding SQL
	fields.

	* SoObjects/SOGo/DOMNode+SOGo.[hm]: new category module that
	implement helper methods for DOM processing.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(davCalendarQuery:): specify default values for "start" and "end"
	whenever one of them is missing.

2009-06-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(-fetchFields:...): don't use the privacySqlString twice.
	The component parameter MUST be a NSString from now on. Fixed a
	syntax problem in the where clause occuring when vtodo components
	were requested.

	* UI/MailPartViewers/UIxMailPartICalViewer.m (-storedEventObject):